src/app/components/player/track-info/track-info.component.css
.track-info-wrapper {
  position: relative;
  top: 0px;
  margin-top: -250px;
  width: 280px;
  margin-left: 10px;
  margin-right: 10px;
  display: inline-block;
}

.song-queue-wrapper {
  background-color: #363636 !important;
  cursor: pointer;
  width: 280px;
  padding-left: 15px;
  padding-top: 15px;
  opacity: 0.98;
  box-shadow: 0 2px 4px black !important;
  opacity: 1;
  position: relative;
  top: 3px;
}

.track {
  margin-bottom: 5px;
  padding: 5px 0;
  border-radius: 5px;
  display: flex;
  height: 31px;
  font-weight: normal;
  font-size: 11px;
  line-height: 1.2em;
  font-family: "Interstate";
}

.align {
  width: 35px;
  display: flex;
  justify-content: space-between;
}

.title {
  width: 80%;
}

.delete,
.play-pause {
  width: 5%;
}

.icon {
  width: 100%;
  height: 100%;
  margin: auto;
}

.info {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.up-next {
   padding-bottom: 5px;
   font-weight: bold;
   font-family: "Interstate";
}

